<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.BeanGradeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/beansize_cover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-120dp"
                android:src="@drawable/beansize_cover"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/rounded_rectangle_up"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginTop="240dp"
                android:background="@drawable/rounded_rectangle_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </LinearLayout>

            <TextView
                android:id="@+id/beangrade_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:layout_marginTop="270dp"
                android:fontFamily="@font/lato_black"
                android:text="Cacao Bean Grades"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/beangrade_description"
                android:layout_width="365dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/lato"
                android:text="@string/beangrade_description"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/beangrade_title"
                app:layout_constraintEnd_toEndOf="parent"
                android:justificationMode="inter_word"
                android:paddingLeft="10dp"/>

            <ImageView
                android:id="@+id/pns_grading_table"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/beangrade_description"
                android:src="@drawable/pns_grading"/>

            <TextView
                android:id="@+id/imagesource"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-50dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="Image source: /www.bafs.da.gov.ph"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:fontFamily="@font/lato"
                app:layout_constraintTop_toBottomOf="@+id/pns_grading_table"
                app:layout_constraintStart_toStartOf="parent"
                />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@color/colorSecondaryLight"
                app:layout_constraintTop_toBottomOf="@+id/imagesource"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:background="@drawable/rounded_rectangle_legend"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Legend"
                        android:fontFamily="@font/lato_bold"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:layout_gravity="center_horizontal|center_vertical"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:text="Grade 1A"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="70dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:text="@string/beangrade1a"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="90dp"
                    android:layout_marginBottom="20dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:text="Grade 1B"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="170dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:text="@string/beangrade1b"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="190dp"
                    android:layout_marginBottom="20dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:text="Grade 1C"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="270dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:text="@string/beangrade1c"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="290dp"
                    android:layout_marginBottom="20dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:text="Grade 2A"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="370dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:text="@string/beangrade2a"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="390dp"
                    android:layout_marginBottom="20dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:text="Grade 2B"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="470dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:text="@string/beangrade2b"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="490dp"
                    android:layout_marginBottom="20dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:text="Grade 2C"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="550dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:text="@string/beangrade2c"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="570dp"
                    android:layout_marginBottom="20dp"
                    />


            </com.google.android.material.card.MaterialCardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</layout>